Atualização aula 10 feita as 21:37, no dia 15/10/2025
Aula 10

--- a/aula10/index.html
+++ b/aula10/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="exerc10.js"></script>
+    <script src="ex02.js"></script>
 </body>
 </html>
